# lab2-2-flex-cc

./: .gitignore  CMakeLists.txt  README.md  my.md  run_tests.sh
flex/: sysy.l
